Fixes #7515 - Prevent label line breaks in add bookmark modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,6 +97,10 @@ a.config_group_name {
   }
 }
 
+#bookmarks-modal .modal-dialog {
+  width: 750px;
+}
+
 #host-conflicts-modal .modal-dialog {
   width: 650px;
 }
